[package]
name = "uf"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "Minimalistic file opener"
repository = "https://github.com/darkfirezz/uf"
categories = [ "command-line-utilities" ]
keywords = [ "minimal", "cli", "file", "opener", "mime" ]

[dependencies]
anyhow = "1.0.95"
